force-app/main/default/objects/onboarding_checklist__c/onboarding_checklist__c.object-meta.xml
<CustomObject>
    <label>Onboarding Document</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>onboarding doc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>