force-app/main/default/objects/onboarding_checklist__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>onboarding_checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>