force-app/main/default/objects/onboarding_checklist__c/fields/document_expiry__c.field-meta.xml
<CustomField>
    <fullName>document_expiry__c</fullName>
    <defaultValue>today() +365</defaultValue>
    <label>document expiry</label>
    <required>true</required>
    <type>Date</type>
</CustomField>