force-app/main/default/objects/onboarding_checklist__c/fields/document_type__c.field-meta.xml
<CustomField>
    <fullName>document_type__c</fullName>
    <label>document type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent agreement</fullName>
            </value>
            <value>
                <fullName>Buyers Agreement</fullName>
            </value>
            <value>
                <fullName>Certificate of Incorporation</fullName>
            </value>
            <value>
                <fullName>Certificate of registration</fullName>
            </value>
            <value>
                <fullName>Chart of Shareholders</fullName>
            </value>
            <value>
                <fullName>Company Proof of Address</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>copy of bank statement</fullName>
            </value>
            <value>
                <fullName>Credit Insurance</fullName>
            </value>
            <value>
                <fullName>Credit Report</fullName>
            </value>
            <value>
                <fullName>Directors Personal Identification and proof of address Docs</fullName>
            </value>
            <value>
                <fullName>Directors Resolution</fullName>
            </value>
            <value>
                <fullName>Extract from the Company Register</fullName>
            </value>
            <value>
                <fullName>Financial Statements</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
            <value>
                <fullName>General Terms &amp; Conditions (Funders)</fullName>
            </value>
            <value>
                <fullName>General Terms &amp; Conditions (suppliers)</fullName>
            </value>
            <value>
                <fullName>Google Search Screenshot</fullName>
            </value>
            <value>
                <fullName>initial contact form</fullName>
            </value>
            <value>
                <fullName>Invoice Purchase Agreement (individuals)</fullName>
            </value>
            <value>
                <fullName>Memorandum and Articles of Association</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Personal Identification Documents (individuals)</fullName>
            </value>
            <value>
                <fullName>Primary Contact ID Scan</fullName>
            </value>
            <value>
                <fullName>Proof of Address</fullName>
            </value>
            <value>
                <fullName>Proof of Address (individuals)</fullName>
            </value>
            <value>
                <fullName>purchasers detailed registration form</fullName>
            </value>
            <value>
                <fullName>Register of Directors</fullName>
            </value>
            <value>
                <fullName>Register of Shareholders</fullName>
            </value>
            <value>
                <fullName>Registration Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>