force-app/main/default/objects/onboarding_checklist__c/fields/original_document_certification_notes__c.field-meta.xml
<CustomField>
    <fullName>original_document_certification_notes__c</fullName>
    <label>original document certification notes</label>
    <type>TextArea</type>
</CustomField>