force-app/main/default/objects/onboarding_checklist__c/fields/original_document_certified_by2__c.field-meta.xml
<CustomField>
    <fullName>original_document_certified_by2__c</fullName>
    <formula>IF(ISBLANK(original_document_certified_by__c), original_document_certified_by_agent__r.Name , original_document_certified_by__r.LastName   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>original document certified  by</label>
    <type>Text</type>
</CustomField>