force-app/main/default/objects/onboarding_checklist__c/fields/original_document_certified_by__c.field-meta.xml
<CustomField>
    <fullName>original_document_certified_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>original document certified  by user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>onboarding_documents</relationshipName>
    <type>Lookup</type>
</CustomField>