force-app/main/default/objects/onboarding_checklist__c/fields/original_document_certified_by_agent__c.field-meta.xml
<CustomField>
    <fullName>original_document_certified_by_agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>original document certified  by agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>onboarding_documents</relationshipName>
    <type>Lookup</type>
</CustomField>