force-app/main/default/objects/onboarding_checklist__c/fields/original_document_certified_date__c.field-meta.xml
<CustomField>
    <fullName>original_document_certified_date__c</fullName>
    <label>original document certified  date</label>
    <type>Date</type>
</CustomField>