force-app/main/default/objects/onboarding_checklist__c/fields/original_document_certified_method__c.field-meta.xml
<CustomField>
    <fullName>original_document_certified_method__c</fullName>
    <label>original document certified method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomlend Director Face to Face</fullName>
            </value>
            <value>
                <fullName>Incomlend other Face to Face</fullName>
            </value>
            <value>
                <fullName>Incomlend Director video call</fullName>
            </value>
            <value>
                <fullName>Incomlend other video call</fullName>
            </value>
            <value>
                <fullName>agent face to face</fullName>
            </value>
            <value>
                <fullName>agent video call</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>embassy</fullName>
            </value>
            <value>
                <fullName>police</fullName>
            </value>
            <value>
                <fullName>lawyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>