force-app/main/default/objects/onboarding_checklist__c/validationRules/contact_account_is_same_as_account.validationRule-meta.xml
<ValidationRule>
    <fullName>contact_account_is_same_as_account</fullName>
    <active>false</active>
    <errorConditionFormula>(account__r.Id &lt;&gt; Contact__r.Account.Id)
  || 
( ISBLANK( Contact__r.Id ) = TRUE )</errorConditionFormula>
    <errorDisplayField>account__c</errorDisplayField>
    <errorMessage>choose the same account as the contacts account</errorMessage>
</ValidationRule>