force-app/main/default/objects/onboarding_checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Zed Trading DMCC</label>
</ListView>